--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "check-firebase": "node scripts/check-firebase.js",
+    "test-firebase": "node scripts/test-firebase-connection.js",
+    "test-auth": "node scripts/test-auth.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -28,10 +31,13 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.0",
-    "react-native-web": "^0.21.1"
+    "react-native-web": "^0.21.1",
+    "yup": "^1.7.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "dotenv": "^17.2.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
