--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "firebase": "^12.2.1",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.0",
+    "react-native-svg": "^15.13.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.1",
-    "yup": "^1.7.0",
-    "react-dom": "19.1.0"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
