--- a/.env
+++ b/.env
@@ -25,6 +25,16 @@ EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=302465967341
 # App ID
 EXPO_PUBLIC_FIREBASE_APP_ID=1:302465967341:web:6e85125b2aff0c66d098e4
 
+# Measurement ID (Analytics)
+EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-KNDX89VES0
+
+# ==========================================
+# GOOGLE SIGN-IN CONFIGURATION
+# ==========================================
+# Web Client ID para Google Sign-In
+# Obtenha em: Firebase Console → Authentication → Sign-in method → Google → Web SDK configuration
+EXPO_PUBLIC_FIREBASE_WEB_CLIENT_ID=302465967341-bnf6tdqpn8516kc8qcrvfnhcj12sip7o.apps.googleusercontent.com
+
 # ==========================================
 # INSTRUÇÕES PARA OBTER AS CREDENCIAIS
 # ==========================================
