feat: Configurar EAS Build para compilação de APK
- ✅ Adicionar configuração eas.json com perfil APK
- ✅ Configurar permissões Android no app.json
- ✅ Adicionar versionCode para Android
- 📱 Preparado para build de APK para teste no celular

--- a/app.json
+++ b/app.json
@@ -27,7 +27,13 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.renatotales3.core"
+      "package": "com.renatotales3.core",
+      "versionCode": 1,
+      "permissions": [
+        "INTERNET",
+        "WRITE_EXTERNAL_STORAGE",
+        "READ_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -56,6 +62,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "cbc6784f-d42e-4718-b0f9-73fe2fddb9a4"
+      }
     }
   }
 }
