--- a/package.json
+++ b/package.json
@@ -15,25 +15,26 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
-    "expo": "~54.0.7",
+    "expo": "^54.0.8",
     "expo-blur": "^15.0.7",
-    "expo-constants": "^18.0.8",
+    "expo-constants": "~18.0.9",
     "expo-device": "^8.0.7",
     "expo-linear-gradient": "^15.0.7",
     "expo-notifications": "^0.32.11",
-    "expo-router": "^6.0.4",
+    "expo-router": "~6.0.6",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "^31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "^6.0.7",
     "firebase": "^12.2.1",
+    "lucide-react-native": "^0.544.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.1",
     "yup": "^1.7.0"
