--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#0A0A0F"
+      "backgroundColor": "#000000"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -23,7 +23,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#0A0A0F"
+        "backgroundColor": "#000000"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -41,17 +41,17 @@
     },
     "plugins": [
       "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "backgroundColor": "#0A0A0F",
-          "image": "./assets/splash-icon.png",
-          "dark": {
-            "backgroundColor": "#0A0A0F",
-            "image": "./assets/splash-icon.png"
+              [
+          "expo-splash-screen",
+          {
+            "backgroundColor": "#000000",
+            "image": "./assets/splash-icon.png",
+            "dark": {
+              "backgroundColor": "#000000",
+              "image": "./assets/splash-icon.png"
+            }
           }
-        }
-      ],
+        ],
       [
         "expo-notifications",
         {
