--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-reanimated": "^4.1.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.1",
     "victory-native": "^41.20.1",
