--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "web": "expo start --web",
     "check-firebase": "node scripts/check-firebase.js",
     "test-firebase": "node scripts/test-firebase-connection.js",
-    "test-auth": "node scripts/test-auth.js"
+    "test-auth": "node scripts/test-auth.js",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src app",
+    "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src app --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -42,7 +45,13 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "dotenv": "^17.2.2",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
