--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Lint
+        run: |
+          npm run lint || true
+
       - name: TypeScript check
         run: npx tsc --noEmit
