--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Lint
         run: |
-          npm run lint || true
+          npm run lint
 
       - name: TypeScript check
         run: npx tsc --noEmit
