--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "check-firebase": "node scripts/check-firebase.js",
     "test-firebase": "node scripts/test-firebase-connection.js",
     "test-auth": "node scripts/test-auth.js",
-  "lint": "npx eslint@8 --config .eslintrc.cjs --ext .js,.jsx,.ts,.tsx src app",
-  "lint:fix": "npx eslint@8 --config .eslintrc.cjs --ext .js,.jsx,.ts,.tsx src app --fix",
+    "lint": "npx eslint@8 --config .eslintrc.cjs --ext .js,.jsx,.ts,.tsx src app",
+    "lint:fix": "npx eslint@8 --config .eslintrc.cjs --ext .js,.jsx,.ts,.tsx src app --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-google-signin/google-signin": "^16.0.0",
+    "babel-preset-expo": "^54.0.2",
     "expo": "^54.0.8",
     "expo-blur": "^15.0.7",
     "expo-constants": "~18.0.9",
@@ -40,15 +41,16 @@
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.1",
+    "react-native-worklets": "^0.5.1",
     "victory-native": "^41.20.1",
     "yup": "^1.7.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-  "@typescript-eslint/eslint-plugin": "^8.44.0",
-  "@typescript-eslint/parser": "^8.44.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
     "dotenv": "^17.2.2",
-  "eslint": "^8.57.1",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
