--- a/finance-app/package.json
+++ b/finance-app/package.json
@@ -3,19 +3,29 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
+    "start:web": "expo start --web",
+    "start:tunnel": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "reset-cache": "expo start --clear",
+    "prebuild": "expo prebuild",
+    "build": "eas build",
+    "build:web": "expo export --platform web"
   },
   "dependencies": {
+    "@expo/metro-config": "~54.0.2",
     "expo": "~54.0.10",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.73.0",
     "typescript": "~5.9.2"
   },
   "private": true
